// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`log CLI prints the resolved log directory path 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"<HOME>/Library/Logs/oo
"
,
}
`;

exports[`log CLI prints the previous log file by default 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"second-log
"
,
}
`;

exports[`log CLI prints a selected previous log file by index 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"second-log
"
,
}
`;
